# Mater_thesis

./: .gitignore  CEvo.sln  CEvo.vcxproj  CEvo.vcxproj.filters  CEvo_Analysis.R  CEvo_Calls.R  CEvo_Sequence.R  CMakeLists.txt  KJ528765.fasta  README.md  Various.R  def.cpp  header.hpp  job_call.sh  job_submit.sh  main.cpp  parameter_search.sh  trmat.csv
Version2/: Makefile  TODO  epi.hpp  global_fct.cpp  global_fct.hpp  host.cpp  host.hpp  main.cpp  par_class.cpp  par_class.hpp  strain.hpp
Version2/tests/: test_par_const.cpp  test_read_pars.cpp
src/: CMakeLists.txt  test.sh
src/HIVEvo/: CMakeLists.txt
src/HIVEvo/example/: CMakeLists.txt  main.cpp
src/HIVEvo/lib/: CMakeLists.txt  TransitionMatrix.h  epi.cpp  epi.h  global_fct.cpp  global_fct.h  host.cpp  host.h  par_class.cpp  par_class.h  strain.h
src/HIVEvo/tests/: CMakeLists.txt  test_par_const.cpp  test_read_pars.cpp
src/OldProject/: header.hpp  job_submit.sh
src/cmake/: CompilerSpecificSetup.cmake  Utils.cmake
